# AStarPathfinding

./: .gitignore  Algorithm.cpp  Algorithm.hpp  AlgorithmRenderer.cpp  AlgorithmRenderer.hpp  AlgorithmVisualizer.cpp  AlgorithmVisualizer.hpp  BaseAlgorithm.hpp  BaseGridLoader.hpp  CMakeLists.txt  CMakeUserPresets.json  FileGridLoader.cpp  FileGridLoader.hpp  Grid.csv  GridRenderer.cpp  GridRenderer.hpp  GridTypes.hpp  Main.cpp  PheromoneAlgorithm.cpp  PheromoneAlgorithm.hpp  README.md  RandomGridLoader.cpp  RandomGridLoader.hpp  Simulation.cpp  Simulation.hpp  SimulationRenderer.cpp  SimulationRenderer.hpp  Utils.cpp  Utils.hpp  Utils.tcc
cmake/: Toolchain-linux.cmake
src/: AlgorithmRenderer.cpp  AlgorithmRenderer.hpp  FileGridLoader.cpp  GridRenderer.hpp  Main.cpp  PheromoneAlgorithm.hpp  SimulationRenderer.cpp  SimulationRenderer.hpp  Utils.cpp  Utils.hpp
test/: CMakeLists.txt  test_run_1000.cpp  test_run_once.cpp  test_run_premade_grid.cpp
